--- a/uiFront/index.html
+++ b/uiFront/index.html
@@ -16,6 +16,17 @@
     <script type="module" src="/src/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+    <script>
+
+      function reloadStyles() {
+        var links = document.getElementsByTagName("link");
+        for (var i = 0; i < links.length; i++) {
+          if (links[i].rel === "stylesheet") {
+              links[i].href = links[i].href.split("?")[0] + "?" + new Date().getTime();
+          }
+        }
+      }
+    </script>
   </body>
 
   <style>
